<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/insert_one"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/insert_one"
        />

    <Button
        android:id="@+id/insert_some"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/insert_some"
        />
    <Button
        android:id="@+id/update_one"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/update_one"
        />
    <Button
        android:id="@+id/find_one"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/find_one"
        />

    <Button
        android:id="@+id/find_all"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        android:onClick="onClick"
        android:text="@string/find_all"
        />

    <Button
        android:id="@+id/delete_one"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/delete_one"
        />

    <Button
        android:id="@+id/delete_all"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/delete_all"
        />

   <!-- scrollview只允许一个子元素-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:id="@+id/tv"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>
